# keyword-pattern-generator

./: .env.example  .gitignore  README.md  api_caller.py  document_generator.py  google_api.py  google_service_account.json  keywords.txt  pattern_generator.py  printer.py  pyproject.toml  runner.py  server.py  settings.py  translate.py  twitter_api.py  ui.py  util.py  wikipedia_api.py
api/: api_caller.py  google_api.py  twitter_api.py  wikipedia_api.py
cache/coexistence(exhibition)/text/: twitter.txt  wikipedia.txt
cache/diversification(marketingstrategy)/text/: wikipedia.txt
cache/entropy/text/: twitter.txt  wikipedia.txt
cache/exquisitecorpse/text/: twitter.txt  wikipedia.txt
cache/frankenstein/text/: twitter.txt  wikipedia.txt
cache/identity(philosophy)/images/: mmmmmmm.png.tiff
cache/identity(philosophy)/text/: twitter.txt  wikipedia.txt
cache/interpassivity/text/: twitter.txt  wikipedia.txt
cache/interpretation(philosophy)/text/: twitter.txt  wikipedia.txt
cache/kiosk/text/: twitter.txt  wikipedia.txt
cache/mashup(education)/text/: twitter.txt  wikipedia.txt
cache/mutation/text/: twitter.txt  wikipedia.txt
cache/recycling/text/: twitter.txt  wikipedia.txt
data/text/: 1.txt  10.txt  11.txt  19.txt  2.txt  20.txt  22.txt  26.txt  27.txt  29.txt  33.txt  38.txt  39.txt  43.txt  9.txt
filtering/: elastic_transform.py  japanify.py  pixelsort.py  ripple_effect.py  segmentation.py  smoothing.py  steal_colors_with_same_brightness.py
filtering/pixelsorter/: __init__.py  edge_detection.py  images2gif.py  keys.py  paths.py  sort.py
(+43 files in other folders)
